# huffman-archiver

./: CMakeLists.txt  README.md
include/: BitStream.h  CLI.h  Huffman.h  HuffmanArchiver.h
src/: BitStream.cpp  CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  main.cpp
test/: TestBitStream.cpp  TestCLI.cpp  TestHuffmanArchiver.cpp  TestHuffmanTree.cpp
